--- a/OMGAndroid2/app/src/main/res/values/strings.xml
+++ b/OMGAndroid2/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="app_name">OMGAndroid2</string>
-    <string name="hello_world">Apps Win The Internet!!</string>
+    <string name="textview">Apps Win The Internet!!</string>
     <string name="action_settings">Settings</string>
+    <string name="button">Update the TextView</string>
 
 </resources>
