--- a/OMGAndroid2/app/src/main/res/values/strings.xml
+++ b/OMGAndroid2/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="textview">Apps Win The Internet!!</string>
     <string name="action_settings">Settings</string>
     <string name="button">Update the TextView</string>
+    <string name="hint">A Name</string>
 
 </resources>
